--- a/你不知道的算法.md
+++ b/你不知道的算法.md
@@ -14,18 +14,39 @@
 
 
 let intersect = function (nums1, nums2) {
-    nums1.sort((a, b) => a - b);
-    nums2.sort((a, b) => a - b);
-    let l = 0, r = 0, ans = [];
-    while (l < nums1.length && r < nums2.length) {
-        if (nums1[l] === nums2[r]) {
-            ans.push(nums1[l]);
-            l++;
-            r++;
-        } else nums1[l] < nums2[r] ? l++ : r++;
-    }
-    return ans;
+  nums1.sort((a, b) => a - b)
+  nums2.sort((a, b) => a - b)
+  let l = 0, r = 0, ans = []
+  while (l < nums1.length && r < nums2.length) {
+    if (nums1[l] === nums2[r]) {
+      ans.push(nums1[l])
+      l++;
+      r++;
+    } else nums1[l] < nums2[r] ? l++ : r++
+  }
+  return ans
 };
+```
+
+### [2. 最长公共前缀] (https://leetcode-cn.com/problems/longest-common-prefix/)
+```js
+// 输入: ["flower","flow","flight"]    输出: "fl"
+// 输入: ["dog","racecar","car"]       输出: ""
+
+let longestCommonPrefix = function(strs) {
+  if(strs.length == 0) return ""
+
+  let ans = strs[0]
+  for(let i =1;i<strs.length;i++) {
+    let j=0
+    for(;j<ans.length && j < strs[i].length;j++) {
+      if(ans[j] != strs[i][j]) break
+    }
+    ans = ans.substr(0, j)
+    if(ans === "") return ans
+  }
+  return ans
+}
 ```
 
 ## 链表系列
